saving user after login

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
+    "crypto": "^1.0.1",
     "firebase": "^9.4.0",
+    "node-rsa": "^1.1.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
