--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@capacitor/storage": "^1.2.3",
-    "@ionic/angular": "^5.5.2",
+    "@ionic/angular": "^6.0.0",
+    "@ionic/angular-server": "^6.0.1",
     "@ionic/pwa-elements": "^3.0.2",
     "crypto": "^1.0.1",
     "firebase": "^9.4.0",
