--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-rsa": "^1.1.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "eslint": "^7.6.0",
