--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "@ionic/pwa-elements": "^3.0.2",
     "crypto": "^1.0.1",
     "firebase": "^9.4.0",
+    "moment": "^2.29.1",
     "node-rsa": "^1.1.1",
     "rxfire": "^6.0.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.1",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
@@ -56,12 +57,14 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^8.6.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
