--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-rsa": "^1.1.1",
     "rxfire": "^6.0.0",
     "rxjs": "^7.5.1",
+    "swiper": "^7.4.1",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
