--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ionic serve",
+    "build": "ionic build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "emulator": "firebase emulators:start --export-on-exit emulator-dump",
-    "emulator-with-dump": "firebase emulators:start --import emulator-dump --export-on-exit emulator-dump",
+    "emulator-with-dump": "firebase emulators:start --inspect-functions --import emulator-dump --export-on-exit emulator-dump",
     "postinstall": "ngcc"
   },
   "private": true,
