--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci
+      - run: npm i @ionic/cli
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
