--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "build": "ionic build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "cypress open",
     "emulator": "firebase emulators:start --export-on-exit emulator-dump",
     "emulator-with-dump": "firebase emulators:start --inspect-functions --import emulator-dump --export-on-exit emulator-dump",
     "postinstall": "ngcc"
   },
   "private": true,
+  "repository": {
+    "url": "https://github.com/W1ckh3ad/whatsgram",
+    "type": "git"
+  },
   "dependencies": {
     "@angular/common": "~13.1.1",
     "@angular/core": "~13.1.1",
@@ -66,6 +70,8 @@
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "chance": "^1.1.8",
+    "cypress": "^9.5.2",
     "eslint": "^8.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "2.22.1",
