--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ionic/angular": "^6.0.0",
     "@ionic/angular-server": "^6.0.1",
     "@ionic/pwa-elements": "^3.0.2",
+    "angularx-qrcode": "^13.0.6",
     "crypto": "^1.0.1",
     "firebase": "^9.4.0",
     "moment": "^2.29.1",
